sources/SharpLox/Parsing/Grammar
comma_expression -> expression ("," expression)* ;
expression       -> ternary ;
conditional      -> equality ("?" equality ":" equality)*
equality         -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison       -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term             -> factor ( ( "-" | "+" ) factor )* ;
factor           -> unary ( ( "/" | "*" ) unary )* ;
unary            -> ( "!" | "-" ) unary
                 | primary ;
primary          -> NUMBER | STRING | "true" | "false" | "nil"
                 | "(" expression ")" ;
